test/visibility/submodule-in-file/errors/DoubleNested.chpl
module DoubleNested {
  module DoubleNested {
    include module SubModule;
  }
  proc main() {
    import DoubleNested.DoubleNested.SubModule as T;
    writeln(T.subVar);
    writeln(T.subFn());
  }
}
