test/visibility/submodule-in-file/errors/DoubleNested.good
DoubleNested.chpl:2: error: Cannot include module from an in-line nested module
